@@ -1,3 +1,7 @@
+1999-11-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (quantizeError): Eliminated method.
+
 1999-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (annotate & draw): Changed implementation to
